Finished Japanese Curry page

--- a/recipes/jcurry.html
+++ b/recipes/jcurry.html
@@ -16,3 +16,7 @@
     <li>1 1/2 containers japanese curry roux</li>
 </ul></p>
 <h4>Steps</h4>
+<p><ol>
+    <li>Heat oil in a 6-quart pot over medium-high heat. Add beef and saute until brown, 5 to 7 minutes. Add onions and cook until starting to soften, about 3 minutes. Add ketchup and Worcestershire sauce. Stir to coat. Add cayenne pepper. Pour in water to cover mixture by 1 or 2 inches. Add carrots and bouillon.</li>
+    <li>Simmer, skimming fat off the surface of the broth as needed, for 30 minutes. Add potatoes. Stir in 1 package of curry roux and let dissolve; add remaining curry as needed to achieve desired thickness. Continue simmering until beef and vegetables are tender, about 30 minutes more.</li>
+</ol></p>
