Finished project 3 Recipes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <body>
         <meta charset="UTF-8">
-        <H1>Japanese Curry</H1>
-        <a href="https://www.allrecipes.com/recipe/274077/japanese-curry/">Japanese Curry</a>
+        <H1>Odin Recipes</H1>
+        <ul>
+            <li><a href="../odin-recipes/recipes/jcurry.html">Japanese Curry</a></li>
+            <li><a href="../odin-recipes/recipes/omelette.html">Ham and Cheese Omelette</a></li>
+            <li><a href="../odin-recipes/recipes/salmon.html">Baked Salmon in a Foil Packet</a></li>
+        </ul>
     </body>
 </html>
