Finished fixed title

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -1,4 +1,4 @@
-<h1>Ham and CHeese Omelette</h1>
+<h1>Ham and Cheese Omelette</h1>
 <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8013344.jpg&w=917&h=1219&c=sc&poi=face&q=60" alt="delicious ham and cheese omelette">
 <p>So easy and so good. I usually saute the ham before adding it to the omelette so it gets crispy and more flavorful.</p>
 <h4>Ingredients</h4>
